// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter component renders correctly 1`] = `
<div
  class="filter-container"
  data-focusindex="0"
>
  <div
    class="filter-selector"
  >
    <div
      class="filter-selector-content"
    >
      <button
        aria-controls="undefined-filter-selectors"
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-default filter-selector-button button-icon contains"
      >
         
      </button>
    </div>
  </div>
  <input
    class="form-control filter-input"
    type="text"
    value=""
  />
</div>
`;

exports[`Filter component renders correctly when not adjustable by user 1`] = `
<div
  class="filter-container"
  data-focusindex="0"
>
  <input
    class="form-control"
    type="text"
    value=""
  />
</div>
`;

exports[`Filter component renders correctly with aria labels 1`] = `
<div
  class="filter-container"
  data-focusindex="0"
>
  <div
    class="filter-selector"
  >
    <div
      class="filter-selector-content"
    >
      <button
        aria-controls="undefined-filter-selectors"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="my label"
        class="btn btn-default filter-selector-button button-icon contains"
      >
         
      </button>
    </div>
  </div>
  <input
    aria-label="my label"
    class="form-control filter-input"
    type="text"
    value=""
  />
</div>
`;
